--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -18,6 +18,25 @@ stages:
         include:
         - master
         - develop
+  # 需要符合Rancher版本
+  - runScriptConfig:
+      image: iiiorg/rancher-cli:v2.4.6
+      shellScript: rancher login ${rancher_url} -t ${rancher_api_token} --skip-verify && 
+        rancher kubectl delete configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env 
+        --ignore-not-found=true && 
+        rancher kubectl create configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env 
+        --from-env-file=iiidevops/app.env && 
+        rancher kubectl annotate configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env 
+        iiidevops.org/project_name=${CICD_GIT_REPO_NAME} iiidevops.org/branch=${CICD_GIT_BRANCH} 
+        iiidevops.org/commit_id=${CICD_GIT_COMMIT} iiidevops.org/type=appenv
+    # Rancher管理授權連線
+    envFrom:
+    - sourceKey: API_TOKEN
+      sourceName: pipeline-api-key
+      targetKey: rancher_api_token
+    - sourceKey: rancher-url
+      sourceName: rancher
+      targetKey: rancher_url
 
 - name: Checkmarx source code scan
   steps:
@@ -27,9 +46,8 @@ stages:
       name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-cmx
       targetNamespace: ${CICD_GIT_REPO_NAME}
       answers:
-        # Common answers
+        # Test common answers
         pipeline.sequence: ${CICD_EXECUTION_SEQUENCE}
-        harbor.host: harbor-demo.iiidevops.org
         git.url: ${CICD_GIT_URL}
         git.repoName: ${CICD_GIT_REPO_NAME}
         git.branch: ${CICD_GIT_BRANCH}
@@ -44,7 +62,7 @@ stages:
   steps:
   - applyAppConfig:
       catalogTemplate: cattle-global-data:iii-dev-charts3-web
-      version: 0.4.0
+      version: 0.5.1
       name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-serv
       targetNamespace: ${CICD_GIT_REPO_NAME}
       answers:
@@ -97,7 +115,6 @@ stages:
         web.port: 8080
         # Common answers
         pipeline.sequence: ${CICD_EXECUTION_SEQUENCE}
-        harbor.host: harbor-demo.iiidevops.org
         git.url: ${CICD_GIT_URL}
         git.repoName: ${CICD_GIT_REPO_NAME}
         git.branch: ${CICD_GIT_BRANCH}
@@ -115,9 +132,9 @@ stages:
       name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-wi
       targetNamespace: ${CICD_GIT_REPO_NAME}
       answers:
+        web.deployName: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-serv
         # Common answers
         pipeline.sequence: ${CICD_EXECUTION_SEQUENCE}
-        harbor.host: harbor-demo.iiidevops.org
         git.url: ${CICD_GIT_URL}
         git.repoName: ${CICD_GIT_REPO_NAME}
         git.branch: ${CICD_GIT_BRANCH}
