--- a/iiidevops/pipeline_settings.json
+++ b/iiidevops/pipeline_settings.json
@@ -1,6 +1,6 @@
 {
-  "name": "Spring Boot Gradle - Hello World",
-  "description": "Gradle jdk8 / Spring Boot 2.3.3 / Tomcat jdk11 <a class='el-link el-link--primary' href='https://github.com/iiidevops-templates/java-spring-boot-app-gradle/blob/master/README.md' target='_blank'>Hello world 範本說明</a>",
+  "name": "Java Spring Boot (Gradle) - Hello example",
+  "description": "Gradle jdk8 / Spring Boot 2.3.3 / Tomcat jdk11 <a class='el-link el-link--primary' href='https://github.com/iiidevops-templates/java-spring-boot-app-gradle/blob/master/README.md' target='_blank'>Hello 範本說明</a>",
   "arguments": [
   ]
 }
