--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -131,7 +131,7 @@ stages:
     branch:
       include:
       - master
-- name: Test--Webinspect
+- name: Test--WebInspect
   steps:
   - applyAppConfig:
       answers:
@@ -168,7 +168,7 @@ stages:
     branch:
       include:
       - master
-- name: Test Sideex Runner
+- name: Test--SideeX
   steps:
   - applyAppConfig:
       answers:
