--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -13,7 +13,6 @@ stages:
       include:
       - master
       - develop
-
 - name: Test--Checkmarx source code scan
   iiidevops: checkmarx
   steps:
@@ -33,7 +32,6 @@ stages:
       include:
       - master
       - develop
-
 - name: Deploy--Set Web environment variables
   iiidevops: deployed-environments
   steps:
@@ -57,7 +55,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Build--Build and push docker image
   iiidevops: deployed-environments
   steps:
@@ -77,7 +74,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Deploy--Web
   iiidevops: deployed-environments
   steps:
@@ -91,7 +87,7 @@ stages:
         pipeline.sequence: ${CICD_EXECUTION_SEQUENCE}
         web.imageTag: ${CICD_GIT_REPO_NAME}/${CICD_GIT_BRANCH}:${CICD_GIT_COMMIT}
         web.port: 8080
-        kube.ingress.base_domain: "ingress-dev3.iiidevops.org"
+        kube.ingress.base_domain: ingress-dev3.iiidevops.org
       catalogTemplate: cattle-global-data:iii-dev-charts3-web
       name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-serv
       targetNamespace: ${CICD_GIT_REPO_NAME}
@@ -100,7 +96,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Deploy--Wait Web deployment
   iiidevops: deployed-environments
   steps:
@@ -123,7 +118,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Test--ZAP
   iiidevops: zap
   steps:
@@ -144,7 +138,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Test--WebInspect
   iiidevops: webinspect
   steps:
@@ -164,7 +157,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Test--Postman
   iiidevops: postman
   steps:
@@ -185,7 +177,6 @@ stages:
     branch:
       include:
       - master
-
 - name: Test--SideeX
   iiidevops: sideex
   steps:
@@ -206,4 +197,3 @@ stages:
     branch:
       include:
       - master
-
