--- a/iiidevops/pipeline_settings.json
+++ b/iiidevops/pipeline_settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Java Spring Boot (Gradle) - Hello example",
-  "description": "Gradle jdk8 / Spring Boot 2.3.3 / Tomcat jdk11 <a class='el-link el-link--primary' href='https://github.com/iiidevops-templates/java-spring-boot-app-gradle/blob/master/README.md' target='_blank'>Hello 範本說明</a><hr size=1 /><b>v1.8.0</b><li>支援 SideeX 多測試檔功能<li>彙整 III DevOps Pipeline 相關 Stage 在 UI 統一開關功能",
+  "description": "Gradle jdk8 / Spring Boot 2.3.3 / Tomcat jdk11 <a class='el-link el-link--primary' href='https://github.com/iiidevops-templates/java-spring-boot-app-gradle/blob/master/README.md' target='_blank'>Hello 範本說明</a><hr size=1 /><b>v1.9.0</b><li>支援 SideeX 設定變數檔案功能<br /><b>v1.8.0</b><li>支援 SideeX 多測試檔功能<li>彙整 III DevOps Pipeline 相關 Stage 在 UI 統一開關功能",
   "arguments": [
   ]
 }
