--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,9 +11,7 @@ stages:
   when:
     branch:
       include:
-      - master
       - develop
-
 - name: Test--Checkmarx source code scan
   iiidevops: checkmarx
   steps:
@@ -33,7 +31,7 @@ stages:
     branch:
       include:
       - skip-master
-
+      - master
 - name: Deploy--Set Web environment variables
   iiidevops: deployed-environments
   steps:
@@ -48,16 +46,16 @@ stages:
       image: iiiorg/rancher-cli:v2.4.6
       shellScript: rancher login ${rancher_url} -t ${rancher_api_token} --skip-verify
         && rancher kubectl delete configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env
-        --ignore-not-found=true && perl iiidevops/bin/chk-app-env.pl && rancher kubectl create configmap -n ${CICD_GIT_REPO_NAME}
-        ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env --from-env-file=iiidevops/app.env
-        && rancher kubectl annotate configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env
-        iiidevops.org/project_name=${CICD_GIT_REPO_NAME} iiidevops.org/branch=${CICD_GIT_BRANCH}
-        iiidevops.org/commit_id=${CICD_GIT_COMMIT} iiidevops.org/type=appenv
+        --ignore-not-found=true && perl iiidevops/bin/chk-app-env.pl && rancher kubectl
+        create configmap -n ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env
+        --from-env-file=iiidevops/app.env && rancher kubectl annotate configmap -n
+        ${CICD_GIT_REPO_NAME} ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-env iiidevops.org/project_name=${CICD_GIT_REPO_NAME}
+        iiidevops.org/branch=${CICD_GIT_BRANCH} iiidevops.org/commit_id=${CICD_GIT_COMMIT}
+        iiidevops.org/type=appenv
   when:
     branch:
       include:
       - skip-master
-
 - name: Build--Build and push docker image
   iiidevops: deployed-environments
   steps:
@@ -77,7 +75,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Deploy--Web
   iiidevops: deployed-environments
   steps:
@@ -100,7 +97,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Deploy--Wait Web deployment
   iiidevops: deployed-environments
   steps:
@@ -123,7 +119,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Test--ZAP
   iiidevops: zap
   steps:
@@ -145,7 +140,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Test--WebInspect
   iiidevops: webinspect
   steps:
@@ -166,7 +160,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Test--Postman
   iiidevops: postman
   steps:
@@ -188,7 +181,6 @@ stages:
     branch:
       include:
       - skip-master
-
 - name: Test--SideeX
   iiidevops: sideex
   steps:
@@ -210,4 +202,3 @@ stages:
     branch:
       include:
       - skip-master
-
