修改pipeline確認線上是否正常運行

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -76,7 +76,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 
 - name: Build--Build and push docker image
   iiidevops: deployed-environments
@@ -96,7 +96,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 
 - name: Deploy--Web
   iiidevops: deployed-environments
@@ -119,7 +119,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 
 - name: Deploy--Wait Web deployment
   iiidevops: deployed-environments
@@ -142,7 +142,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 
 - name: Test--ZAP
   iiidevops: zap
