Test 修改 No coverage report can be found with sonar.coverage.jacoco.xmlReportPaths='/usr/src/app/build/reports/jacoco/jacoco.xml' 問題

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 sonarqube {
     properties {
         property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
-        property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/jacoco.xml"
+        property 'sonar.coverage.jacoco.xmlReportPaths', "${project.buildDir}/reports/jacoco/jacoco.xml"
     }
 }
 
