--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -76,6 +76,7 @@ stages:
     branch:
       include:
       - skip-master
+      - master
 - name: Build--Build and push docker image
   iiidevops: deployed-environments
   steps:
@@ -95,6 +96,7 @@ stages:
     branch:
       include:
       - skip-master
+      - master
 - name: Build--Scan docker image
   iiidevops: deployed-environments
   steps:
@@ -110,6 +112,7 @@ stages:
     branch:
       include:
       - skip-master
+      - master
 - name: Deploy--Web
   iiidevops: deployed-environments
   steps:
@@ -134,6 +137,7 @@ stages:
     branch:
       include:
       - skip-master
+      - master
 - name: Deploy--Wait Web deployment
   iiidevops: deployed-environments
   steps:
@@ -156,6 +160,7 @@ stages:
     branch:
       include:
       - skip-master
+      - master
 - name: Test--ZAP
   iiidevops: zap
   steps:
