--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -32,7 +32,6 @@ stages:
     branch:
       include:
       - master
-      - develop
 - name: Test--Checkmarx source code scan
   iiidevops: checkmarx
   steps:
@@ -51,7 +50,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Deploy--Set Web environment variables
   iiidevops: deployed-environments
   steps:
@@ -75,7 +74,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Build--Build and push docker image
   iiidevops: deployed-environments
   steps:
@@ -94,7 +93,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Build--Scan docker image
   iiidevops: deployed-environments
   steps:
@@ -109,7 +108,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Deploy--Web
   iiidevops: deployed-environments
   steps:
@@ -138,7 +137,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Deploy--Wait Web deployment
   iiidevops: deployed-environments
   steps:
@@ -160,7 +159,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Test--ZAP
   iiidevops: zap
   steps:
@@ -181,7 +180,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Test--WebInspect
   iiidevops: webinspect
   steps:
@@ -222,7 +221,7 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
 - name: Test--SideeX
   iiidevops: sideex
   steps:
@@ -243,4 +242,4 @@ stages:
   when:
     branch:
       include:
-      - skip-master
+      - master
